<?xml version="1.0" encoding="utf-8"?>
<com.vending.android.view.PurchaseLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/purchase_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/purchase_instructions" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_marginTop="10dp">

        <TableRow>

            <Button
                android:id="@+id/one_penny_button"
                android:text="@string/one_penny" />

            <Button
                android:id="@+id/two_penny_button"
                android:text="@string/two_p" />

            <Button
                android:id="@+id/five_penny_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five_p" />

            <Button
                android:id="@+id/ten_penny_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten_p" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/twenty_penny_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twenty_p" />

            <Button
                android:id="@+id/fifty_penny_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifty_p" />

            <Button
                android:id="@+id/one_pound_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_pound" />

            <Button
                android:id="@+id/two_pounds_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_pounds" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/amount_inserted_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:text="@string/amount_inserted"/>

    <Button
        android:id="@+id/ok_button"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok" />
    
</com.vending.android.view.PurchaseLinearLayout>