<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <Button
        android:id="@+id/purchase_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase" />

    <Button
        android:id="@+id/restock_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restock" />

    <TextView
        android:id="@+id/stock_level_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_level"
        android:layout_margin="10dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/stored_cash_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stored_cash"
        android:layout_margin="10dp"
        android:textSize="18sp"/>
    
</LinearLayout>